--- a/Карапетян_Хачатур_Задание_по_премодулю.ipynb
+++ b/Карапетян_Хачатур_Задание_по_премодулю.ipynb
@@ -336,10 +336,25 @@
         "\n"
       ],
       "metadata": {
-        "id": "NcORHQCE3ZSU"
+        "id": "NcORHQCE3ZSU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9eae9ff6-dfe2-4a4e-96e4-9e2c8b80430e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    col 1      col 2   col 3    col 4\n",
+            "0       Я      люблю  анализ   данных\n",
+            "1  Python        мой  лучший     друг\n",
+            "2    Буду  стараться  хорошо  учиться\n"
+          ]
+        }
+      ]
     }
   ]
 }
